[package]
name = "travelling-salesman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
pathfinding = "4.8.2"
serde = { version = "1.0.195", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.89"
